--- a/PhoneCommon/PhoneCommon.csproj
+++ b/PhoneCommon/PhoneCommon.csproj
@@ -51,11 +51,16 @@
     <Reference Include="mscorlib.extensions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\IconButton.cs" />
+    <Compile Include="Controls\ThemeIconButton.cs" />
     <Compile Include="Controls\Link.cs" />
     <Compile Include="Controls\PanoramaEx.cs" />
     <Compile Include="Controls\PanoramaItemEx.cs" />
+    <Compile Include="Controls\PivotEx.cs" />
     <Compile Include="Controls\Tile.cs" />
+    <Compile Include="Grouping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThemeResources.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="StandardStyles.xaml">
